--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Offline</title>
+    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
   </head>
   <body>
     <h1>You are offline</h1>
