--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Offline</title>
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-  </head>
-  <body>
-    <h1>You are offline</h1>
-    <p>But in the right spot.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pi Network Balance</title>
+</head>
+<body>
+  <h1>Welcome to Pi Network Balance Checker</h1>
+  <button id="authButton">Authenticate with Pi</button>
+  <p id="balance">Your balance will appear here after authentication.</p>
+
+  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+  <script src="app.js"></script>
+</body>
 </html>
