--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Palace of Goods - An e-commerce marketplace powered by Web3 and the Pi Network." />
+    <meta name="theme-color" content="#4caf50" />
 
+    <!-- App Title -->
+    <title>Palace of Goods</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon-192x192.png" />
+    
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Palace of Goods" />
+    <meta property="og:description" content="An e-commerce marketplace powered by Web3 and the Pi Network." />
+    <meta property="og:image" content="/favicon-512x512.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Palace of Goods" />
+    <meta name="twitter:description" content="An e-commerce marketplace powered by Web3 and the Pi Network." />
+    <meta name="twitter:image" content="/favicon-512x512.png" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!-- The root element where React will render -->
+
+    <!-- Scripts -->
+    <script src="/static/js/main.js"></script>
+  </body>
+      </html>
